--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ZłomTo.pl – Skupujemy auta za 100 zł</title>
+  <title>Odbierzemy Twój pojazd bezpłatnie z dowolnego miejsca w Polsce i zapłacimy Ci 100 zł.</title>
   <style>
     body {
       margin: 0;
@@ -157,6 +157,30 @@
       </div>
 
       <!-- Krok 3 -->
+      <div class="form-step">
+        <label for="carDetails">Informacje o samochodzie:</label>
+        <textarea id="carDetails" name="carDetails" required placeholder="Wpisz szczegóły o aucie"></textarea>
+        <button type="button" class="prev-btn">Wstecz</button>
+        <button type="submit" class="submit-btn">Wyślij zgłoszenie</button>
+      </div>
+
+      <!-- Krok 4 -->
+      <div class="form-step">
+        <label for="carDetails">Informacje o samochodzie:</label>
+        <textarea id="carDetails" name="carDetails" required placeholder="Wpisz szczegóły o aucie"></textarea>
+        <button type="button" class="prev-btn">Wstecz</button>
+        <button type="submit" class="submit-btn">Wyślij zgłoszenie</button>
+      </div>
+
+      <!-- Krok 5 -->
+      <div class="form-step">
+        <label for="carDetails">Informacje o samochodzie:</label>
+        <textarea id="carDetails" name="carDetails" required placeholder="Wpisz szczegóły o aucie"></textarea>
+        <button type="button" class="prev-btn">Wstecz</button>
+        <button type="submit" class="submit-btn">Wyślij zgłoszenie</button>
+      </div>
+
+      <!-- Krok 6 -->
       <div class="form-step">
         <label for="carDetails">Informacje o samochodzie:</label>
         <textarea id="carDetails" name="carDetails" required placeholder="Wpisz szczegóły o aucie"></textarea>
