--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 <body>
 
   <header>
-    <img src="logo.png" alt="ZłomTo.pl Logo" />
+    <img src="logo - zlomto.pl" alt="ZłomTo.pl Logo" />
     <div class="banner-wrapper">
       <div class="banner">
         <img src="car-silhouette.png" alt="Auto" />
@@ -194,3 +194,4 @@
         <label>Czy pojazd ma koła?</label>
         <select id="hasWheels" name="hasWheels" required>
           <option value="">Wybierz</option
+
