--- a/index.html
+++ b/index.html
@@ -2,83 +2,90 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ZłomTo.pl – Skup Aut za 100 zł</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>ZŁOMTO.PL – Auto za 100 zł</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <style>
     * {
-      box-sizing: border-box;
       margin: 0;
       padding: 0;
+      box-sizing: border-box;
     }
 
     body {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
-        'Open Sans', 'Helvetica Neue', sans-serif;
-      background-color: #f8f8f8;
+      font-family: 'Inter', sans-serif;
+      background-color: #f9f9f9;
       color: #111;
-      line-height: 1.6;
       display: flex;
       flex-direction: column;
       align-items: center;
-      padding: 20px;
+      padding: 1rem;
     }
 
     header {
       text-align: center;
-      margin-bottom: 1rem;
+      max-width: 800px;
+      width: 100%;
     }
 
     header img {
-      max-width: 240px;
+      max-width: 220px;
       height: auto;
+      margin: 1rem auto 0.5rem;
+      display: block;
     }
 
-    .banner-wrapper {
-      position: relative;
+    .silhouette {
       width: 100%;
-      max-width: 320px;
-      height: 24px;
-      margin: 0 auto 1.3rem;
-      overflow: hidden;
-      user-select: none;
-      z-index: 1;
+      height: 80px;
+      background: url('car-silhouette.png') repeat-x bottom;
+      animation: moveCars 6s linear infinite;
+      margin: 0 auto;
+      max-width: 800px;
     }
 
-    .banner {
-      display: flex;
-      gap: 40px;
-      height: 24px;
-      width: max-content;
-      animation: scrollLeft 8s linear infinite;
-      will-change: transform;
-    }
-
-    .banner img {
-      height: 24px;
-      width: auto;
-    }
-
-    @keyframes scrollLeft {
-      0% {
-        transform: translateX(0);
+    @keyframes moveCars {
+      from {
+        background-position-x: 100%;
       }
-      100% {
-        transform: translateX(-50%);
+      to {
+        background-position-x: 0%;
       }
     }
 
-    main {
-      max-width: 500px;
-      width: 100%;
-      background: #fff;
+    h1 {
+      font-size: 1.8rem;
+      font-weight: 800;
+      margin: 1rem 0 0.5rem;
+    }
+
+    .subtext {
+      font-size: 1.1rem;
+      line-height: 1.6;
+      margin-bottom: 2rem;
+      color: #555;
+    }
+
+    .subtext strong {
+      display: block;
+      margin-top: 0.5rem;
+    }
+
+    .form-container {
+      background-color: #fff;
       padding: 2rem;
-      border-radius: 1rem;
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.05);
+      border-radius: 12px;
+      box-shadow: 0 8px 24px rgba(0,0,0,0.06);
+      max-width: 600px;
+      width: 100%;
+      margin-bottom: 3rem;
     }
 
-    h1, h2, p {
-      text-align: center;
+    .form-container h2 {
+      font-size: 1.4rem;
+      font-weight: 600;
       margin-bottom: 1rem;
+      text-align: center;
     }
 
     form {
@@ -87,95 +94,135 @@
       gap: 1rem;
     }
 
-    input, select, button {
+    label {
+      font-weight: 600;
+      margin-bottom: 0.25rem;
+    }
+
+    input, textarea {
       padding: 0.75rem;
-      font-size: 1rem;
-      border-radius: 8px;
       border: 1px solid #ccc;
+      border-radius: 8px;
+      font-size: 1rem;
     }
 
     button {
-      background-color: #111;
+      background-color: #000;
       color: #fff;
       border: none;
+      padding: 0.9rem;
+      border-radius: 8px;
+      font-size: 1rem;
+      font-weight: 600;
       cursor: pointer;
+      transition: background-color 0.2s ease-in-out;
     }
 
-    .hidden {
+    button:hover {
+      background-color: #333;
+    }
+
+    .thank-you {
       display: none;
-    }
-
-    .thanks {
       text-align: center;
-      font-size: 1.1rem;
+      font-size: 1.2rem;
       margin-top: 2rem;
+      color: #28a745;
     }
 
-    @media (max-width: 600px) {
-      body {
-        padding: 10px;
+    @media (max-width: 768px) {
+      h1 {
+        font-size: 1.4rem;
       }
-      header img {
-        max-width: 180px;
+      .subtext {
+        font-size: 1rem;
       }
     }
   </style>
 </head>
 <body>
+
   <header>
-    <img src="logo - zlomto.pl.png" alt="ZłomTo.pl Logo" />
-    <div class="banner-wrapper">
-      <div class="banner">
-        <img src="silhouette.svg" alt="Silhouette" />
-        <img src="silhouette.svg" alt="Silhouette" />
-        <img src="silhouette.svg" alt="Silhouette" />
-        <img src="silhouette.svg" alt="Silhouette" />
-      </div>
-    </div>
+    <img src="logo - zlomto.pl.png" alt="ZŁOMTO.PL logo" />
+    <div class="silhouette"></div>
+    <h1>Odbierzemy Twój pojazd bezpłatnie z dowolnego miejsca w Polsce i zapłacimy Ci 100 zł.</h1>
+    <p class="subtext">
+      Niesprawny? – Nie ma problemu<br>
+      Brak kół? – Nie ma problemu<br>
+      Brak ubezpieczenia? – Nie ma problemu<br><br>
+      Wypełnij prosty formularz. To zajmie tylko chwilę.
+    </p>
   </header>
 
-  <main>
-    <h1>Sprzedaj auto za 100 zł</h1>
-    <p>Wypełnij prosty formularz. To zajmie tylko chwilę.</p>
+  <section class="form-container" id="form-section">
+    <h2>Formularz zgłoszeniowy</h2>
+    <form id="sellForm" action="https://formspree.io/f/xwkgrvze" method="POST">
+      <label for="name">Imię i nazwisko właściciela</label>
+      <input type="text" id="name" name="Imię i nazwisko" required>
 
-    <form id="zlomForm">
-      <div class="step" id="step1">
-        <input type="text" name="name" placeholder="Imię i nazwisko" required />
-        <button type="button" onclick="nextStep(1)">Dalej</button>
-      </div>
+      <label for="address">Adres zamieszkania</label>
+      <input type="text" id="address" name="Adres zamieszkania" required>
 
-      <div class="step hidden" id="step2">
-        <input type="tel" name="phone" placeholder="Numer telefonu" required />
-        <button type="button" onclick="nextStep(2)">Dalej</button>
-      </div>
+      <label for="pesel">PESEL właściciela</label>
+      <input type="text" id="pesel" name="PESEL" required>
 
-      <div class="step hidden" id="step3">
-        <input type="text" name="car" placeholder="Marka i model auta" required />
-        <button type="submit">Wyślij zgłoszenie</button>
-      </div>
+      <label for="car">Marka i model auta</label>
+      <input type="text" id="car" name="Marka i model" required>
+
+      <label for="vin">Numer VIN</label>
+      <input type="text" id="vin" name="VIN" required>
+
+      <label for="plates">Numer rejestracyjny</label>
+      <input type="text" id="plates" name="Numer rejestracyjny" required>
+
+      <label for="year">Rok produkcji</label>
+      <input type="number" id="year" name="Rok produkcji" required>
+
+      <label for="mileage">Przebieg</label>
+      <input type="number" id="mileage" name="Przebieg" required>
+
+      <label for="email">Email (do wysyłki umowy)</label>
+      <input type="email" id="email" name="Email" required>
+
+      <label for="phone">Numer telefonu</label>
+      <input type="tel" id="phone" name="Telefon" required>
+
+      <input type="hidden" name="_cc" value="tiptop.zrobione@gmail.com">
+
+      <button type="submit">Wyślij zgłoszenie</button>
     </form>
 
-    <div class="thanks hidden" id="thankYou">
-      <p>Dziękujemy za wypełnienie formularza!<br>
+    <div class="thank-you" id="thankYouMessage">
+      Dziękujemy za wypełnienie formularza!<br>
       Odezwiemy się w ciągu 2 dni roboczych.<br>
-      Pracujemy od poniedziałku do soboty, 9:00–15:00.</p>
+      Pracujemy od poniedziałku do soboty, 9:00–15:00.
     </div>
-  </main>
+  </section>
 
   <script>
-    const steps = ["step1", "step2", "step3"];
-    let current = 0;
+    const form = document.getElementById('sellForm');
+    const thankYouMessage = document.getElementById('thankYouMessage');
 
-    function nextStep(index) {
-      document.getElementById(steps[index - 1]).classList.add("hidden");
-      document.getElementById(steps[index]).classList.remove("hidden");
-    }
-
-    document.getElementById("zlomForm").addEventListener("submit", function (e) {
+    form.addEventListener('submit', function (e) {
       e.preventDefault();
-      this.classList.add("hidden");
-      document.getElementById("thankYou").classList.remove("hidden");
+      const formData = new FormData(form);
+      fetch(form.action, {
+        method: "POST",
+        body: formData,
+        headers: {
+          'Accept': 'application/json'
+        }
+      }).then(response => {
+        if (response.ok) {
+          form.reset();
+          form.style.display = 'none';
+          thankYouMessage.style.display = 'block';
+        } else {
+          alert("Wystąpił błąd. Spróbuj ponownie.");
+        }
+      });
     });
   </script>
+
 </body>
 </html>
